--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,25 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/waterBlue</item>
+        <item name="colorPrimaryDark">@color/Flat_WetAsphalt</item>
+        <item name="colorAccent">@color/waterBlue</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/Flat_WetAsphalt
+        </item>
+        <item name="windowNoTitle">true</item>
+
+    </style>
+
+    <style name="Base.Widget.AppCompat.RatingBar.Small.MyRatingBar">
+        <item name="android:colorAccent" tools:targetApi="lollipop">@color/paleLavender</item>
+        <item name="android:colorPrimaryDark" tools:targetApi="lollipop">@color/paleLavender</item>
+    </style>
 </resources>
